# novalang

./: .gitattributes  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  install.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
linguist/: README.md  languages.yml.entry  nova.tmLanguage.json
linguist/samples/Nova/: attributes.nova  modules.nova
nova/: .gitignore  Cargo.toml  HANDOFF3.md  HANDOFF4.md  HANDOFF5.md  README.md
nova/bench/: .gitignore  BENCHMARKS.md  README.md  run.sh
nova/bench/blockchain/: main.c  main.go  main.nova  main.py
nova/bench/fib/: Main.java  main.c  main.go  main.js  main.lua  main.nova  main.py  main.rb  main.rs  main.ts
nova/bench/life/: main.c  main.go  main.nova  main.py
nova/bench/mandel/: Main.java  main.c  main.go  main.lua  main.nova  main.py  main.rb  main.rs  main.ts
nova/bench/sieve/: Main.java  main.c  main.cpp  main.go  main.js  main.lua  main.nova  main.py  main.rb  main.rs
nova/demos/: echo_client.nova  echo_server.nova  gpu_kernels.nova  hello_native.nova  http_server.nova  tls_client.nova  tls_server.nova  web_app.nova  ws_client.nova  ws_server.nova
nova/docs/: ATTRIBUTES.md  BUILD.md  FEATURES.md  MIGRATION.md  REGISTRY.md  ROADMAP.md  SELFHOST.md
nova/examples/: advanced.nova  aliases_patterns.nova  arrays.nova  async.nova  bank.nova  bigint.nova  bitwise_loops.nova  bounds_extern.nova  clean.nova  closures.nova  collections.nova  combo.nova  compute.nova  const_data.nova  database.nova  demo.nova  dicts.nova  documented.nova  effects.nova  encoding_full.nova  enums.nova  err2.nova  errors.nova  errors_located.nova  factorial.nova  features.nova  fib_arr.nova  fs_full.nova  generators.nova  generics.nova  json.nova  loops.nova  machine.nova  macro_hygiene.nova  macros.nova  newfeatures.nova  ownership.nova  path_full.nova  patterns.nova  randtime.nova  (+12 more)
nova/examples/apps/: todo.nova  wc.nova
nova/examples/hgx_app/: nova.hgx
nova/examples/hgx_app/src/: main.nova
nova/examples/modules/: app.nova  geometry.nova
nova/examples/tests/: suite.nova
nova/runtime/: nova_box_rt.c  nova_native_rt.c  nova_rt.c
nova/selfhost/: bootstrap.sh  checker.nova  eval.nova  lexer.nova  parser.nova
nova/src/: aot.rs  ast.rs  astdump.rs  build.rs  bytecode.rs  config.rs  diag.rs  fmt.rs  gpu.rs  interp.rs  jit.rs  lsp.rs  main.rs  nova.pest  obfuscate.rs  parser.rs  registry.rs  tokens.rs  types.rs
nova/std/: datex.nova  ds.nova  fmtx.nova  func.nova  json.nova  list.nova  mathx.nova  setx.nova  sort.nova  strx.nova
nova/tests/: arm_smoke.sh  daemon_smoke.sh  demon_smoke.sh  lsp_smoke.sh  obfuscate_smoke.sh  pkg_smoke.sh  registry_smoke.sh  run_corpus.sh  selfhost_smoke.sh  valgrind_smoke.sh  wasm_smoke.sh
nova/tests/corpus/: aot_arrays.nova  aot_float_print.nova  aot_mandel.nova  aot_mixed_tiers.nova  aot_sieve.nova  aot_strings.nova  arrays_maps.nova  attr_runtime.nova  attributes.nova  bigint_math.nova  closures_hof.nova  comptime_eval.nova  errors_try.nova  float_edges.nova  flow_edges.nova  generators_lazy.nova  int_edges.nova  io_files.nova  jit_arrays.nova  jit_float_mixed.nova  jit_structs.nova  json_roundtrip.nova  match_patterns.nova  method_dispatch.nova  numeric_mixed.nova  refine_sig.nova  simd_kernel.nova  state_migration.nova  stdlib_combo.nova  stream_lazy.nova  strings_ops.nova  struct_fieldloop.nova  structs_impl.nova  sys_layer.nova  tiering_hot.nova  try_defer.nova  type_system_advanced.nova  union_types.nova
