[package]
name = "nova"
version = "3.26.0"
edition = "2021"

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
pest = "=2.7.8"
pest_derive = "=2.7.8"
cranelift = "0.116"
cranelift-jit = "0.116"
cranelift-module = "0.116"
cranelift-native = "0.116"

[[bin]]
name = "nova"
path = "src/main.rs"

# Whole-program optimization: fat LTO + a single codegen unit let the compiler
# inline across the interpreter's hot dispatch loop (eval → exec_block → call).
# Worth 15–30% on interpreter-bound workloads; no semantic effect.
[profile.release]
lto = "fat"
codegen-units = 1
panic = "unwind"
