[package]
name = "nova"
version = "3.31.0"
edition = "2021"

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
pest = "=2.7.8"
pest_derive = "=2.7.8"
cranelift = { version = "0.116", optional = true }
cranelift-jit = { version = "0.116", optional = true }
cranelift-module = { version = "0.116", optional = true }
cranelift-native = { version = "0.116", optional = true }

# The JIT is the only cranelift consumer. Cranelift can only *compile* for
# x86-64/aarch64/s390x/riscv64 hosts, so on other arches (e.g. 32-bit ARM /
# Termux, `armv7`) it fails to build. Making it an optional feature lets Nova
# build there with `--no-default-features`: the interpreter, bytecode VM, and
# AOT-via-C backend need nothing from cranelift and stay fully functional.
[features]
default = ["jit"]
jit = ["dep:cranelift", "dep:cranelift-jit", "dep:cranelift-module", "dep:cranelift-native"]

[[bin]]
name = "nova"
path = "src/main.rs"

# Whole-program optimization: fat LTO + a single codegen unit let the compiler
# inline across the interpreter's hot dispatch loop (eval → exec_block → call).
# Worth 15–30% on interpreter-bound workloads; no semantic effect.
[profile.release]
lto = "fat"
codegen-units = 1
panic = "unwind"
